--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ a {
 a:hover {
   color: #535bf2;
 }
-
+/* Estilos de la App */
 body {
   margin: 0;
   display: flex;
@@ -35,10 +35,20 @@ h1 {
   font-size: 4em;
   margin-bottom: 40px;
 }
-.cards {
-    /* display: flex; */
-
+.card {
+    margin: 5px;
+    margin-bottom: 30px;
+    height: 650px;
 }
+.img {
+    width: 300px;
+    height: 400px;
+}
+.text {
+
+   width: px;
+}
+
 
 
 
